--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="referrer" content="no-referrer">
-	<link rel="stylesheet" href="music_index_pc.css" media="(min-width:320px)">
-	<link rel="stylesheet" href="wap_music_index.css" media=" (max-width:319px)">
+	<!--<link rel="stylesheet" href="music_index_pc.css" >-->
+	<link rel="stylesheet" href="wap_music_index.css">
 	<link rel="stylesheet" href="font.css">
 	<link rel="icon" href="music_icon.jpg">
 	<script src="jquery-1.12.4.min.js"></script>
